# Auralite

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProjectVSC.bat  README.md  premake5.lua
Auralite/: CMakeLists.txt
Auralite/Source/: Auralite.h  arpch.h
Auralite/Source/Auralite/include/Core/: Application.h  Layer.h  Window.h
Auralite/Source/Auralite/include/Core/Events/: Event.h  MouseEvent.h
Auralite/Source/Auralite/src/Core/: Application.cpp  Layer.cpp  LayerStack.cpp
Auralite/Source/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Auralite/src/: Auralite.h  arpch.h
Auralite/src/Auralite/include/Core/: Application.h  Core.h  EntryPoint.h  Log.h
Auralite/src/Auralite/include/Core/Onyx/: Application.h  Core.h  EntryPoint.h  Log.h
Auralite/src/Auralite/src/Core/: Application.cpp  Log.cpp
Auralite/src/Auralite/src/Core/Onyx/: Application.cpp  Log.cpp
Engine/: CMakeLists.txt
Engine/Source/: Auralite.h  arpch.h
Engine/Source/Auralite/include/Core/: Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Log.h  MouseButtonCodes.h  Window.h
Engine/Source/Auralite/include/Events/: ApplicationEvent.h  Event.h  KeyEvent.h
Engine/Source/Auralite/include/ImGui/: ImGuiLayer.h
Engine/Source/Auralite/include/Renderer/: Buffer.h  GraphicsContext.h  Renderer.h  Shader.h
Engine/Source/Auralite/src/Core/: Application.cpp  LayerStack.cpp  Log.cpp
Engine/Source/Auralite/src/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp
Engine/Source/Auralite/src/Renderer/: Buffer.cpp  Renderer.cpp  Shader.cpp
Engine/Source/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  ImGuiOpenGLRenderer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGlContext.cpp  OpenGlContext.h
Engine/Source/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/src/: Main.cpp  SandboxApp.cpp
